--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # remote_theme: pages-themes/cayman@v0.2.0
 # remote_theme: pages-themes/midnight@v0.2.0
 # remote_theme: pages-themes/slate@v0.2.0
-remote_theme: pages-themes/minima@v2.5.2
+remote_theme: pages-themes/modernist@v2.5.2
 plugins:
 - jekyll-remote-theme
 title: Crankcoder's homepage
